tests/NormalTests/paczka1/fuzzy1/50236351.err
Error in line 6: ecqByAC86g A123 36,2
Error in line 8: BKAVVwTTTQR A635 59,1
Error in line 4: TOc A123 43,3
Error in line 16: TOc A635 16,0
Error in line 10: RF7QbZ S652 81,9
